fix text sizes (was abit too big) and text selection

--- a/components/hero/hero.module.scss
+++ b/components/hero/hero.module.scss
@@ -24,6 +24,11 @@
       img {
         width: 100%;
         height: auto;
+
+        &::selection {
+          background-color: $secondary-accent;
+          color: $secondary-accent;
+        }
       }
     }
   }
