--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -12,51 +12,78 @@ body {
 }
 
 h1 {
-	font-size: 4rem;
+	font-size: 2.5rem;
 	font-weight: 900;
-	letter-spacing: 2px;
+	letter-spacing: 0.25px;
+
+	&::selection {
+		background-color: $secondary-accent;
+		color: $background-color;
+	}
 }
 
 h2 {
-	font-size: 3rem;
+	font-size: 2rem;
 	font-weight: 800;
 	margin: 0;
+	letter-spacing: 0.25px;
+
+	&::selection {
+		background-color: $primary-accent;
+		color: $secondary-accent;
+	}
 }
 
 p {
-	font-size: 2rem;
+	font-size: 1.5rem;
 	font-weight: 500;
 	margin-top: 0;
 	line-height: 1.25;
+	letter-spacing: 0.25px;
+	position: relative;
 
 	&:last-child {
 		margin-bottom: 0;
+	}
+
+	&::selection {
+		box-shadow: 10px 10px 10px red;
+		background-color: $primary-accent;
+		color: $secondary-accent;
+	}
+
+	em {
+		&::selection {
+			background-color: $primary-accent;
+			color: $secondary-accent;
+		}
+	}
+}
+
+a {
+	&::selection {
+		background-color: $primary-accent;
+		color: $secondary-accent;
 	}
 }
 
 ul {
 	li {
-		font-size: 2rem;
+		font-size: 1.25rem;
 	}
 }
 
 @media (max-width: 1600px) {
 	h1 {
-		font-size: 2.75rem;
-	}
-
-	h2 {
 		font-size: 2.25rem;
 	}
 
-	p {
+	h2 {
 		font-size: 1.75rem;
 	}
 
-	ul {
-		li {
-			font-size: 1.75rem;
-		}
+	p {
+		font-size: 1.5rem;
 	}
 }
 
@@ -70,13 +97,6 @@ ul {
 	}
 
 	p {
-		font-size: 1.25rem;
-	}
-
-	ul {
-		li {
-			padding: 12px;
-			font-size: 1.25rem;
-		}
+		font-size: 1.2rem;
 	}
 }
